# mcp-servers

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  DISPATCHER.md  DUCKDB.md  MEMORY.md  README.md  RESULTS.md  TODO.md  pr.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data.md  dispatcher.md  duckdb.md  github.md  lsp.md  memory.md  workspace.md
skills/mcp-github/: SKILL.md
skills/mcp-workspace/: SKILL.md
src/mcp_servers/: __init__.py
src/mcp_servers/_common/: __init__.py  gh.py
src/mcp_servers/data/: __init__.py  server.py
src/mcp_servers/data/models/: schemas.py
src/mcp_servers/data/tools/: __init__.py  query.py  schema.py
src/mcp_servers/dispatcher/: server.py
src/mcp_servers/dispatcher/models/: schemas.py
src/mcp_servers/dispatcher/tools/: __init__.py  jobs.py
src/mcp_servers/duckdb/: __init__.py  server.py
src/mcp_servers/duckdb/models/: schemas.py
src/mcp_servers/duckdb/tools/: query.py  schema.py
src/mcp_servers/github/: __init__.py  auth.py  client.py  server.py  utils.py
src/mcp_servers/github/models/: __init__.py  schemas.py
src/mcp_servers/github/tools/: __init__.py  actions.py  api.py  issues.py  milestones.py  prs.py  repos.py  reviews.py
src/mcp_servers/lsp/: __init__.py  client.py  server.py  session.py  treesitter.py  utils.py
src/mcp_servers/lsp/models/: __init__.py  schemas.py
src/mcp_servers/lsp/tools/: __init__.py  diagnostics.py  mutations.py  navigation.py  symbols.py  treesitter.py
src/mcp_servers/memory/: client.py  server.py
src/mcp_servers/memory/models/: schemas.py
src/mcp_servers/memory/tools/: __init__.py  db.py  forget.py  list_memories.py  recall.py  remember.py  sync.py
src/mcp_servers/swarm/: server.py
src/mcp_servers/workspace/: git.py  server.py
src/mcp_servers/workspace/models/: schemas.py
src/mcp_servers/workspace/tools/: __init__.py  branches.py  log.py  status.py
tests/: test_gh.py  test_lsp_client.py  test_lsp_server.py  test_server.py  test_tool_annotations.py
tests/data/: test_data_annotations.py  test_query.py  test_server.py
tests/dispatcher/: test_dispatcher_annotations.py  test_e2e_pull_model.py  test_server.py
tests/duckdb/: test_query.py  test_server.py
tests/github/: conftest.py  test_auth.py  test_client.py  test_github_annotations.py  test_server_app.py  test_utils.py
tests/github/tools/: test_actions.py  test_api.py  test_issues.py  test_milestones.py  test_prs.py  test_repos.py  test_reviews.py
tests/lsp/: conftest.py  test_client.py  test_lsp_annotations.py  test_mutations.py  test_server.py  test_session.py  test_treesitter.py  test_utils.py
tests/lsp/tools/: __init__.py  test_diagnostics.py  test_integration.py  test_mutations.py  test_navigation.py  test_symbols.py  test_treesitter.py
tests/memory/: test_memory.py  test_memory_annotations.py
tests/swarm/: test_server.py
tests/workspace/: conftest.py  test_git.py  test_workspace_annotations.py  test_workspace_server_app.py
tests/workspace/tools/: test_branches.py  test_log.py  test_status.py
typings/: jq.pyi
