[project]
name = "mcp-servers"
dynamic = ["version"]
description = "A small collection of focused, self-maintained MCP servers"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "jahrik", email = "jahrik@gmail.com" }]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
# One console script per server. The ansible-ai-agents role registers these
# as `type: stdio` MCP servers (command: mcp-github, etc.).
mcp-github = "mcp_servers.github.server:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "ty>=0.0.55",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
