[project]
name = "mcp-servers"
dynamic = ["version"]
description = "A small collection of focused, self-maintained MCP servers"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "jahrik", email = "jahrik@gmail.com" }]
dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.28.1",
    "jq>=1.11.0",
    "mcp>=1.2.0",
    "pyjwt>=2.13.0",
    # duckdb's Python API needs pytz to return TIMESTAMPTZ values
    "pytz>=2024.1",
    "pydantic>=2.7.0",
]

[project.scripts]
# One console script per server. The ansible-ai-agents role registers these
# as `type: stdio` MCP servers (command: mcp-github, etc.).
mcp-github = "mcp_servers.github.server:main"
mcp-workspace = "mcp_servers.workspace.server:main"
mcp-data = "mcp_servers.data.server:main"
mcp-dispatcher = "mcp_servers.dispatcher.server:main"
mcp-lsp = "mcp_servers.lsp.server:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "ty>=0.0.55",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT"]
ignore = ["E501", "PT011"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
# `jq` is a C extension with no bundled type info; typings/jq.pyi covers it.
extra-paths = ["typings"]
